--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 @import url('components/hero.css');
 @import url('components/about.css');
 @import url('components/skills.css');
+@import url('components/projects.css');
 @import url('components/footer.css');
 
 /* Reset and Base Styles */
