--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @import url('components/about.css');
 @import url('components/skills.css');
 @import url('components/projects.css');
+@import url('components/contact.css');
 @import url('components/footer.css');
 
 /* Reset and Base Styles */
