--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 @import url('components/contact.css');
 @import url('components/footer.css');
 @import url('components/mobile-nav.css');
+@import url('components/animations.css');
+@import url('components/scroll-enhancement.css');
 
 /* Import Responsive Styles */
 @import url('responsive.css');
