--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@
 @import url('components/footer.css');
 @import url('components/mobile-nav.css');
 @import url('components/animations.css');
-@import url('components/scroll-enhancement.css');
+@import url('components/scroll-enhancements.css');
+@import url('components/performance.css');
 
 /* Import Responsive Styles */
 @import url('responsive.css');
